...
        accounts = listOf(
            Account(
                guid = UUID.randomUUID(),
                dateCreated = null,
                dateModified = null,
                name = "GitHub",
                username = "callum",
                emailAddress = "callum@example.com",
                password = "not-a-real-password",
                favourite = true,
                websiteUrl = "https://github.com",
                mfaEnabled = true,
                notes = "My GitHub account",
                passwordHistory = emptyList()
...
